# mm1q

./: .gitignore  README.md
cmm1q/: CMakeLists.txt  main.cpp
scripts/: mm1q.py  mm1q.sh  mm1q_qsub.sh
